ディレクトリ名変えた。

--- a/app/simple-tutorial-lamda-s3/template.yaml
+++ b/app/simple-tutorial-lamda-s3/template.yaml
@@ -34,7 +34,7 @@ Resources:
             Method: get
     Metadata:
       Dockerfile: Dockerfile
-      DockerContext: ./hello_world
+      DockerContext: ./api
       DockerTag: python3.9-v1
 
 Outputs:
