関数の登録。

--- a/app/simple-tutorial-lamda-s3/template.yml
+++ b/app/simple-tutorial-lamda-s3/template.yml
@@ -24,6 +24,8 @@ Resources:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       PackageType: Image
+      ImageConfig:
+        Command: [ "app.ping" ]
       Architectures:
         - x86_64
       Events:
@@ -32,6 +34,25 @@ Resources:
           Properties:
             Path: /
             Method: get
+    Metadata:
+      Dockerfile: Dockerfile
+      DockerContext: ./api
+      DockerTag: python3.9-v1
+
+  ImageUploadFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      PackageType: Image
+      ImageConfig:
+        Command: [ "app.image_upload" ]
+      Architectures:
+        - x86_64
+      Events:
+        HelloWorld:
+          Type: Api
+          Properties:
+            Path: /image/upload
+            Method: post
     Metadata:
       Dockerfile: Dockerfile
       DockerContext: ./api
