ロールの設定。

--- a/app/template.yml
+++ b/app/template.yml
@@ -20,6 +20,36 @@ Resources:
       VersioningConfiguration:
         Status: Enabled
 
+  MyLambdaRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: simple-dataset-generating-supporter-lambda-role
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: simple-dataset-generating-supporter-policy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Sid: AllowS3Object
+                Effect: Allow
+                Action:
+                  - s3:GetObject
+                  - s3:PutObject
+                  - s3:DeleteObject
+                  - s3:ListBucket
+                Resource: !Sub "arn:aws:s3:::${MyBucket}/*"
+              - Sid: AllowS3List
+                Effect: Allow
+                Action:
+                  - s3:ListBucket
+                Resource: !Sub "arn:aws:s3:::${MyBucket}"
+
   PingFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
@@ -47,6 +77,7 @@ Resources:
       PackageType: Image
       ImageConfig:
         Command: [ "app.image_upload" ]
+      Role: !GetAtt MyLambdaRole.Arn
       Architectures:
         - x86_64
       Events:
@@ -66,6 +97,7 @@ Resources:
       PackageType: Image
       ImageConfig:
         Command: [ "app.image_download" ]
+      Role: !GetAtt MyLambdaRole.Arn
       Architectures:
         - x86_64
       Events:
